Removed logic with selected text, fixed escaping chars

--- a/electron-app/src/index.html
+++ b/electron-app/src/index.html
@@ -75,8 +75,8 @@
     <div class="instructions">
       <h3>How to use:</h3>
       <ol>
-        <li>Select any text in any application</li>
-        <li>Press <span class="shortcut">Option+H</span> to send the selected text to Hermione</li>
+        <li>Copy any text to your clipboard</li>
+        <li>Press <span class="shortcut">Option+H</span> to send the clipboard text to Hermione</li>
         <li>The response will be copied to your clipboard</li>
         <li>Press <span class="shortcut">Cmd+V</span> to paste the response at your cursor location</li>
       </ol>
