--- a/electron-app/src/index.html
+++ b/electron-app/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' http://127.0.0.1:*">
-  <title>Snitch</title>
+  <title>CheatKey</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -78,9 +78,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Snitch</h1>
+    <h1>CheatKey</h1>
     <ul>
-      <li>Press <span class="shortcut">Cmd+Option+H</span> to send the clipboard text to Snitch</li>
+      <li>Press <span class="shortcut">Cmd+Option+H</span> to send the clipboard text to CheatKey</li>
     </ul>
     
     <div class="debug-panel">
